# draft-rpki-doa

./: .buildinfo  .gitignore  .pyup.yml  Makefile  README.md  RpkiDiscardOriginAttestation-2021.asn  RpkiDiscardOriginAuthorization-2021.asn  RpkiDiscardOriginAuthorization-2021.patch  api.html  doa-RpkiDiscardOriginAuthorization-2021.asn1  doa.econtent.der  doa.example.xml  draft-spaghetti-sidrops-rpki-doa.xml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini  xml2rfc-version-index.html
.doctrees/: api.doctree  environment.pickle  index.doctree
.doctrees/_xml2rfc/: toc-draft-spaghetti-sidrops-rpki-doa-branches.doctree  toc-draft-spaghetti-sidrops-rpki-doa.doctree  (+3 more)
_sources/: index.md.txt
_static/: documentation_options.js
_xml2rfc/: toc-draft-spaghetti-sidrops-rpki-doa-branches.html  toc-draft-spaghetti-sidrops-rpki-doa-diffs.html  toc-draft-spaghetti-sidrops-rpki-doa-tags.html  toc-draft-spaghetti-sidrops-rpki-doa.html  toc.html
docs/: api.md  conf.py  index.md
drafts/: draft-spaghetti-sidrops-rpki-doa.exp.xml  draft-spaghetti-sidrops-rpki-doa.html  draft-spaghetti-sidrops-rpki-doa.txt
example/: doa-RpkiDiscardOriginAuthorization-2021.asn1  doa.econtent.der  doa.example.xml
packaging/: constraints-idnits.txt  constraints-lint.txt  requirements-dev.txt  requirements-docs.txt  requirements-drafts.txt  requirements-idnits.txt  requirements-lint.txt  requirements-test.txt  requirements-tox.txt
rpkimancer_doa/: __init__.py  communities.py  conjure.py  sigobj.py
tests/: test_library.py
(+23 files in other folders)
