[metadata]
name = rpkimancer-doa
description = A rpkimancer plugin providing support for Discard Origin Authorizations
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
keywords =
    rpki
    draft-spaghetti-sidrops-rpki-doa
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    rpkimancer>=0.1.0, <0.2.0

[options.entry_points]
rpkimancer.asn1.modules =
    RpkiDiscardOriginAuthorization-2021 = rpkimancer_doa.asn1
rpkimancer.sigobj =
    DiscardOriginAuthorization = rpkimancer_doa.sigobj:DiscardOriginAuthorization
rpkimancer.cli.conjure =
    ConjureDoa = rpkimancer_doa.conjure:ConjureDoa
